Refactor NodeInfoList usage (#240)